RESOLVED FIXED 84154
Web Inspector: [CRASH] InspectorDOMAgent::didInsertDOMNode() on page reload with open Inspector
https://bugs.webkit.org/show_bug.cgi?id=84154
Summary Web Inspector: [CRASH] InspectorDOMAgent::didInsertDOMNode() on page reload w...
Alexander Pavlov (apavlov)
Reported 2012-04-17 08:20:59 PDT
WTF::HashTable<WTF::RefPtr<WebCore::Node>, std::pair<WTF::RefPtr<WebCore::Node>, int>, WTF::PairFirstExtractor<std::pair<WTF::RefPtr<WebCore::Node>, int> >, WTF::PtrHash<WTF::RefPtr<WebCore::Node> >, WTF::PairHashTraits<WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >, WTF::HashTraits<WTF::RefPtr<WebCore::Node> > >::checkKey<WTF::HashMapTranslator<WTF::PairHashTraits<WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >, WTF::PtrHash<WTF::RefPtr<WebCore::Node> > >, WebCore::Node*>() at src/third_party/WebKit/Source/WTF/wtf/HashTable.h:487 0x7f69802fa26e WTF::HashTable<WTF::RefPtr<WebCore::Node>, std::pair<WTF::RefPtr<WebCore::Node>, int>, WTF::PairFirstExtractor<std::pair<WTF::RefPtr<WebCore::Node>, int> >, WTF::PtrHash<WTF::RefPtr<WebCore::Node> >, WTF::PairHashTraits<WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >, WTF::HashTraits<WTF::RefPtr<WebCore::Node> > >::lookup<WTF::HashMapTranslator<WTF::PairHashTraits<WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >, WTF::PtrHash<WTF::RefPtr<WebCore::Node> > >, WebCore::Node*>() at src/third_party/WebKit/Source/WTF/wtf/HashTable.h:501 0x7f69802f8037 WTF::HashMap<WTF::RefPtr<WebCore::Node>, int, WTF::PtrHash<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >::inlineGet() at src/third_party/WebKit/Source/WTF/wtf/RefPtrHashMap.h:264 0x7f69802f5809 WTF::HashMap<WTF::RefPtr<WebCore::Node>, int, WTF::PtrHash<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<WTF::RefPtr<WebCore::Node> >, WTF::HashTraits<int> >::get() at src/third_party/WebKit/Source/WTF/wtf/RefPtrHashMap.h:274 0x7f69802f2d1d WebCore::InspectorDOMAgent::didInsertDOMNode() at src/third_party/WebKit/Source/WebCore/inspector/InspectorDOMAgent.cpp:1,398 0x7f69802f04b1 WebCore::InspectorInstrumentation::didInsertDOMNodeImpl() at src/third_party/WebKit/Source/WebCore/inspector/InspectorInstrumentation.cpp:137 0x7f698031e632 WebCore::InspectorInstrumentation::didInsertDOMNode() at src/third_party/WebKit/Source/WebCore/inspector/InspectorInstrumentation.h:427 0x7f697f7b0888 WebCore::ChildNodeInsertionNotifier::notify() at src/third_party/WebKit/Source/WebCore/dom/ContainerNodeAlgorithms.h:227 0x7f697f7b0b7b WebCore::ShadowTree::addShadowRoot() at src/third_party/WebKit/Source/WebCore/dom/ShadowTree.cpp:80 0x7f697f89938f WebCore::ShadowRoot::create() at src/third_party/WebKit/Source/WebCore/dom/ShadowRoot.cpp:121 0x7f697f898b3f WebCore::HTMLInputElement::createShadowSubtree() at src/third_party/WebKit/Source/WebCore/html/HTMLInputElement.cpp:113 0x7f6980595594 WebCore::HTMLInputElement::create() at src/third_party/WebKit/Source/WebCore/html/HTMLInputElement.cpp:106 0x7f69805954cc WebCore::inputConstructor() at src/out/Debug/gen/webkit/HTMLElementFactory.cpp:335 0x7f69809e2502 WebCore::HTMLElementFactory::createHTMLElement() at src/out/Debug/gen/webkit/HTMLElementFactory.cpp:746 0x7f69809e41e9
Attachments
Patch (3.89 KB, patch)
2012-04-17 08:39 PDT, Alexander Pavlov (apavlov)
yurys: review+
Alexander Pavlov (apavlov)
Comment 1 2012-04-17 08:39:37 PDT
Alexander Pavlov (apavlov)
Comment 2 2012-04-17 09:31:18 PDT
Csaba Osztrogonác
Comment 3 2012-04-18 03:22:00 PDT
FYI: This regression was caused by https://bugs.webkit.org/show_bug.cgi?id=82701
Note You need to log in before you can comment on or make changes to this bug.