Web Inspector: [CRASH] InspectorDOMAgent::didInsertDOMNode() on page reload with open Inspector https://bugs.webkit.org/show_bug.cgi?id=84154

Source/WebCore:

Check that a node inserted actually has a parent.

Reviewed by Yury Semikhatsky.

Test: inspector/elements/elements-panel-reload-assert.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::didInsertDOMNode):

LayoutTests:

Reviewed by Yury Semikhatsky.

* inspector/elements/elements-panel-reload-assert-expected.txt: Added.
* inspector/elements/elements-panel-reload-assert.html: Added.

Canonical link: https://commits.webkit.org/101658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114388 268f45cc-cd09-0410-ab3c-d52691b4dbfc